--- a/app/src/main/res/layout/activity_fragment_temperature_tab.xml
+++ b/app/src/main/res/layout/activity_fragment_temperature_tab.xml
@@ -9,16 +9,18 @@
 
     <TextView
         android:id="@+id/salutationsTextView"
-        android:layout_width="306dp"
-        android:layout_height="95dp"
+        android:layout_width="304dp"
+        android:layout_height="135dp"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="64dp"
+        android:gravity="center_vertical"
         android:text="Message"
         android:textAlignment="center"
         android:textColor="@color/colorText"
-        android:textSize="22sp"
+        android:textSize="28sp"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo" />
@@ -43,6 +45,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="48dp"
+        android:gravity="center_vertical"
         android:text="Temperature"
         android:textAlignment="center"
         android:textAllCaps="false"
